--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -6,17 +6,13 @@
 }
 <div class="test">
     <form class="form-horizontal" method="post" action="@Url.Action("CheckUser","Function")">
-        <fieldset class="lewy">
+        <fieldset class="Left">
 
-            <!-- Form Name -->
+            
             <legend>Logowanie</legend>
             
                <div class="errorlogin">@error</div>
             
-            
-            
-
-            <!-- Text input-->
             <div class="form-group">
                 <label class="col-md-4 control-label" for="Email">Email</label>
                 <div class="col-md-4">
@@ -24,7 +20,7 @@
                 </div>
             </div>
 
-            <!-- Password input-->
+            
             <div class="form-group">
                 <label class="col-md-4 control-label" for="Password">Hasło</label>
                 <div class="col-md-4">
@@ -32,7 +28,7 @@
                 </div>
             </div>
 
-            <!-- Button -->
+            
             <div class="form-group">
                 <div class="col-md-4">
                     <button id="LoginButton" name="LoginButton" class="btn btn-primary">Zaloguj</button>
