--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,11 +1,11 @@
 ﻿@using System.Data
 
 @{
-	var saldoData = ViewData["SaldoData"] as List<Saldo>;
-	decimal ostatecznesaldo = 0;
-	decimal ostatecznesaldoeur = 0;
-	decimal majatek = 0;
-	string kursEuroString = "";
+	var BalanceData = ViewData["BalanceData"] as List<Balance>;
+	decimal BalanceLast = 0;
+	decimal BalanceLastEur = 0;
+	decimal wealth = 0;
+	string EuroRateString = "";
 	string result = "";
 
 
@@ -13,38 +13,38 @@
 	{
 
 
-		if (ViewData["SaldoData"] != null && saldoData.Count > 0 && ViewData["wydatkizachcianki"] != null && ViewData["wydatkijedzenie"]
-		!= null && ViewData["wydatkizdrowie"] != null && ViewData["wydatkizdrowieeur"] != null && ViewData["wydatkijedzenieeur"]
-		!= null && ViewData["wydatkizachciankieur"] != null && ViewData["przelewwychodzacyzl"] != null && ViewData["przelewprzychodzacyzl"] != null
-		&& ViewData["przelewwychodzacyeuro"] != null && ViewData["przelewprzychodzacyeuro"] != null)
+		if (ViewData["BalanceData"] != null && BalanceData.Count > 0 && ViewData["ExpensesOthers"] != null && ViewData["ExpensesFood"]
+		!= null && ViewData["ExpensesHealth"] != null && ViewData["ExpensesHealthEur"] != null && ViewData["ExpensesFoodEur"]
+		!= null && ViewData["ExpensesOthersEur"] != null && ViewData["ExpensesOutPln"] != null && ViewData["ExpensesInPln"] != null
+		&& ViewData["ExpensesOutEur"] != null && ViewData["ExpensesInEur"] != null)
 		{
 
-			decimal saldo = (decimal)saldoData[0].PLN;
-			decimal saldoeur = (decimal)saldoData[0].EURO;
-			decimal wydatkizachcianki = (decimal)ViewData["wydatkizachcianki"];
-			decimal wydatkijedzenie = (decimal)ViewData["wydatkijedzenie"];
-			decimal wydatkizdrowie = (decimal)ViewData["wydatkizdrowie"];
+			decimal Balance = (decimal)BalanceData[0].PLN;
+			decimal BalanceEur = (decimal)BalanceData[0].EURO;
+			decimal ExpensesOthers = (decimal)ViewData["ExpensesOthers"];
+			decimal ExpensesFood = (decimal)ViewData["ExpensesFood"];
+			decimal ExpensesHealth = (decimal)ViewData["ExpensesHealth"];
 
-			decimal wydatkizachciankieur = (decimal)ViewData["wydatkizachciankieur"];
-			decimal wydatkijedzenieeur = (decimal)ViewData["wydatkijedzenieeur"];
-			decimal wydatkizdrowieeur = (decimal)ViewData["wydatkizdrowieeur"];
-			kursEuroString = (string)ViewData["KursEuro"];
+			decimal ExpensesOthersEur = (decimal)ViewData["ExpensesOthersEur"];
+			decimal ExpensesFoodEur = (decimal)ViewData["ExpensesFoodEur"];
+			decimal ExpensesHealthEur = (decimal)ViewData["ExpensesHealthEur"];
+			EuroRateString = (string)ViewData["EuroRate"];
 
 
 
-			decimal kursEuro = Convert.ToDecimal(kursEuroString);
+			decimal EuroRate = Convert.ToDecimal(EuroRateString);
 
-			//Przelewy
-			decimal przelewywychodzacezl = (decimal)ViewData["przelewwychodzacyzl"];
-			decimal przelewprzychodzacyzl = (decimal)ViewData["przelewprzychodzacyzl"];
-			decimal przelewywychodzaceeuro = (decimal)ViewData["przelewwychodzacyeuro"];
-			decimal przelewprzychodzacyeuro = (decimal)ViewData["przelewprzychodzacyeuro"];
-			ostatecznesaldo = saldo - wydatkizachcianki - wydatkijedzenie - wydatkizdrowie + przelewprzychodzacyzl - przelewywychodzacezl;
-			ostatecznesaldoeur = saldoeur - wydatkizachciankieur - wydatkijedzenieeur
-			- wydatkizdrowieeur + przelewprzychodzacyeuro - przelewywychodzaceeuro;
+			
+			decimal ExpensesOutPln = (decimal)ViewData["ExpensesOutPln"];
+			decimal ExpensesInPln = (decimal)ViewData["ExpensesInPln"];
+			decimal ExpensesOutEur = (decimal)ViewData["ExpensesOutEur"];
+			decimal ExpensesInEur = (decimal)ViewData["ExpensesInEur"];
+			BalanceLast = Balance - ExpensesOthers - ExpensesFood - ExpensesHealth + ExpensesInPln - ExpensesOutPln;
+			BalanceLastEur = BalanceEur - ExpensesOthersEur - ExpensesFoodEur
+			- ExpensesHealthEur + ExpensesInEur - ExpensesOutEur;
 
-			majatek = ostatecznesaldo + ostatecznesaldoeur * kursEuro;
-			result = majatek.ToString("0.00");
+			wealth = BalanceLast + BalanceLastEur * EuroRate;
+			result = wealth.ToString("0.00");
 		}
 	}
 }
@@ -62,17 +62,17 @@
 <body>
 	<header>
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-			<div class="gora">
-				<div class="headermoj2">
-					@if (ViewContext.RouteData.Values["action"].ToString() != "Form" && result != null && kursEuroString != null && !string.IsNullOrWhiteSpace(result.ToString()))
+			<div class="Up">
+				<div class="MyHeader2">
+					@if (ViewContext.RouteData.Values["action"].ToString() != "Form" && result != null && EuroRateString != null && !string.IsNullOrWhiteSpace(result.ToString()))
 					{
 
-						<div class="saldoplndiv">Majątek: @result Zł</div>
-						<div class="saldoeurdiv">Kurs Euro: @kursEuroString Zł</div>
+						<div class="Balanceplndiv">Majątek: @result Zł</div>
+						<div class="Balanceeurdiv">Kurs Euro: @EuroRateString Zł</div>
 
 					}
 				</div>
-				<div class="headermoj1">
+				<div class="MyHeader1">
 					<div class="container-fluid">
 						@if (ViewContext.RouteData.Values["action"].ToString() != "Login" && ViewContext.RouteData.Values["action"].ToString() != "Register")
 						{
@@ -92,7 +92,7 @@
 						</div>
 
 					}
-					@if (saldoData != null && saldoData.Count > 0)
+					@if (BalanceData != null && BalanceData.Count > 0)
 					{
 
 
@@ -102,11 +102,11 @@
 					}
 				</div>
 				<div class="headermoj2">
-					@if (ViewContext.RouteData.Values["action"].ToString() != "Form" && (saldoData != null && saldoData.Count > 0))
+					@if (ViewContext.RouteData.Values["action"].ToString() != "Form" && (BalanceData != null && BalanceData.Count > 0))
 					{
 
-						<div class="saldoplndiv">Saldo: @ostatecznesaldo Zł</div>
-						<div class="saldoeurdiv">Saldo: @ostatecznesaldoeur €</div>
+						<div class="Balanceplndiv">Saldo: @BalanceLast Zł</div>
+						<div class="Balanceeurdiv">Saldo: @BalanceLastEur €</div>
 
 					}
 				</div>
@@ -121,7 +121,7 @@
 	</div>
 
 	<footer class="border-top footer text-muted">
-		<div class="stopka">
+		<div class="myfooter">
 			<div class="kontener footerleft">
 				&copy; 2024 - Witold Woźniczka - <a>Zadanie ASP.NET</a>
 			</div>
